Fixed layout issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -70,6 +70,16 @@ nav form .btn:hover{
 }
 
 /* events page */
+.img-wrapper {
+    max-height: 250px;
+}
+
+.card-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 iframe {
     width: 100%;
     height: 100%;
